# cbro_parser

./: .coveragerc  .gitignore  README.md  TODO.md  pyproject.toml  pytest.ini
cbro_parser/: __init__.py  cli.py  config.py  main.py  models.py
cbro_parser/cache/: __init__.py  sqlite_cache.py
cbro_parser/cbl/: __init__.py  reader.py  writer.py
cbro_parser/comicvine/: __init__.py  api_client.py  matcher.py  rate_limiter.py
cbro_parser/gui/: __init__.py  app.py  progress_dialog.py  thread_manager.py
cbro_parser/scraper/: __init__.py  cbro_scraper.py  index_scraper.py  utils.py
cbro_parser/utils/: __init__.py  text_normalizer.py
tests/: conftest.py  test_cli.py  test_config.py  test_main.py  test_models.py  test_scraper_utils.py  test_thread_manager.py
tests/cache/: test_sqlite_cache.py
tests/cbl/: test_reader_writer.py
tests/comicvine/: test_api_client.py  test_matcher.py
tests/scraper/: test_cbro_scraper.py  test_index_scraper.py
tests/utils/: test_rate_limiter.py  test_text_normalizer.py
